@@ -38,6 +38,20 @@
 <p>2016-03-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xpm.c (ReadXPMImage): Fix SourceForge bug #335
+&quot;out-of-bounds read in coders/xpm.c:154 &quot;.</li>
+</ul>
+</blockquote>
+<p>2016-03-06  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>doc/options.imdoc (-extent): Revised the example to
+clarify the interaction of -gravity with the &quot;geometry&quot; offsets.</li>
+</ul>
+</blockquote>
+<p>2016-03-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
 <li>configure.ac: Add support for --enable-broken-coders which
 determines if broken or hazardous file format support should be
 enabled in the build.  Currently Adobe Photoshop (PSD) format is
